syntax = "proto3";

package auth;

service AuthService {
    rpc Authenticate (AuthenticationMessage) returns (UserMessage);
    rpc CheckPermissions (CheckPermissionsRequest) returns (CheckPermissionsResponse);
}

message AuthenticationMessage{
    string Authentication = 1;
}

message UserMessage{
    string userId = 1;
    string email = 2;
    string uType = 3;
    string accountId = 4;
    string roleId = 5;
}

message CheckPermissionsRequest {
    string roleId = 1;
    string subject = 2;
    repeated string actions = 3;
  }
  
  message CheckPermissionsResponse {
    bool hasPermission = 1;
  }